dns: fix is_subdomain()

--- a/Makefile.am
+++ b/Makefile.am
@@ -80,6 +80,7 @@ noinst_PROGRAMS = test_hnsd
 
 test_hnsd_SOURCES = test/hnsd-test.c     \
                     test/base32-test.c   \
+                    test/dns-test.c      \
                     test/resource-test.c
 
 test_hnsd_LDFLAGS = -static
