Update node version to LTS in test workflows

--- a/.github/workflows/test-windows.yaml
+++ b/.github/workflows/test-windows.yaml
@@ -33,12 +33,13 @@ jobs:
         run: ./test_hnsd
 
       - name: Setup Integration
-        uses: actions/setup-node@v3.5.1
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: lts/*
+          check-latest: true
 
       - name: Integration Tests
         working-directory: ./integration
-        run:  |
-              npm install
-              npm run test
+        run: |
+          npm install
+          npm run test
