Rename GH Action

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -1,9 +1,9 @@
-name: Update
+name: Regenerate tld.h
 
 on: workflow_dispatch
 
 jobs:
-  update:
+  generate:
     runs-on: ubuntu-latest
 
     steps:
